[gd_scene load_steps=7 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://TestLevel1.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 32 )

[node name="Level1Test" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -589840, 26, 0, -589839, 23, 0, -589838, 23, 0, -589837, 23, 0, -589836, 23, 0, -589835, 23, 0, -589834, 23, 0, -589833, 23, 0, -589832, 23, 0, -589831, 23, 0, -589830, 23, 0, -589829, 23, 0, -589828, 23, 0, -589827, 26, 0, -589826, 26, 0, -589825, 26, 0, -655360, 26, 0, -655359, 26, 0, -655358, 26, 0, -655357, 23, 0, -655356, 23, 0, -655355, 23, 0, -655354, 23, 0, -655353, 23, 0, -655352, 23, 0, -655351, 23, 0, -655350, 23, 0, -655349, 23, 0, -655348, 23, 0, -655347, 23, 0, -655346, 23, 0, -655345, 26, 0, -524304, 24, 0, -524291, 25, 0, -524290, 26, 0, -524289, 26, 0, -589824, 26, 0, -589823, 26, 0, -589822, 24, 0, -589809, 25, 0, -458768, 24, 0, -458755, 25, 0, -458754, 26, 0, -458753, 26, 0, -524288, 26, 0, -524287, 26, 0, -524286, 24, 0, -524273, 25, 0, -393232, 24, 0, -393219, 25, 0, -393218, 26, 0, -393217, 26, 0, -458752, 26, 0, -458751, 26, 0, -458750, 24, 0, -458737, 25, 0, -327696, 24, 0, -327683, 25, 0, -327682, 26, 0, -327681, 26, 0, -393216, 26, 0, -393215, 26, 0, -393214, 24, 0, -393201, 25, 0, -262160, 24, 0, -262147, 25, 0, -262146, 26, 0, -262145, 26, 0, -327680, 26, 0, -327679, 26, 0, -327678, 24, 0, -327665, 25, 0, -196624, 24, 0, -196611, 25, 0, -196610, 26, 0, -196609, 26, 0, -262144, 26, 0, -262143, 26, 0, -262142, 24, 0, -262129, 25, 0, -131088, 24, 0, -131075, 25, 0, -131074, 26, 0, -131073, 26, 0, -196608, 26, 0, -196607, 26, 0, -196606, 24, 0, -196593, 25, 0, -65552, 24, 0, -65547, 15, 0, -65546, 17, 0, -65545, 17, 0, -65544, 17, 0, -65543, 17, 0, -65542, 17, 0, -65541, 17, 0, -65540, 17, 0, -65539, 26, 0, -65538, 26, 0, -65537, 26, 0, -131072, 26, 0, -131071, 26, 0, -131070, 26, 0, -131069, 17, 0, -131068, 17, 0, -131067, 17, 0, -131066, 17, 0, -131065, 17, 0, -131064, 17, 0, -131063, 17, 0, -131062, 16, 0, -131057, 25, 0, -16, 24, 0, -3, 25, 0, -2, 26, 0, -1, 26, 0, -65536, 26, 0, -65535, 26, 0, -65534, 24, 0, -65521, 25, 0, 65520, 24, 0, 65533, 25, 0, 65534, 26, 0, 65535, 26, 0, 0, 26, 0, 1, 26, 0, 2, 24, 0, 15, 25, 0, 131056, 24, 0, 131069, 25, 0, 131070, 26, 0, 131071, 26, 0, 65536, 26, 0, 65537, 26, 0, 65538, 24, 0, 65551, 25, 0, 196592, 24, 0, 196605, 25, 0, 196606, 26, 0, 196607, 26, 0, 131072, 26, 0, 131073, 26, 0, 131074, 24, 0, 131087, 25, 0, 262128, 24, 0, 262141, 25, 0, 262142, 26, 0, 262143, 26, 0, 196608, 26, 0, 196609, 26, 0, 196610, 24, 0, 196623, 25, 0, 327664, 24, 0, 327677, 25, 0, 327678, 26, 0, 327679, 26, 0, 262144, 26, 0, 262145, 26, 0, 262146, 24, 0, 262159, 25, 0, 393200, 24, 0, 393213, 25, 0, 393214, 26, 0, 393215, 26, 0, 327680, 26, 0, 327681, 26, 0, 327682, 24, 0, 327695, 25, 0, 458736, 24, 0, 458749, 20, 0, 458750, 23, 0, 458751, 23, 0, 393216, 23, 0, 393217, 23, 0, 393218, 21, 0, 393231, 25, 0, 524272, 24, 0, 458767, 25, 0, 589808, 24, 0, 524303, 25, 0, 655344, 26, 0, 655345, 22, 0, 655346, 22, 0, 655347, 22, 0, 655348, 22, 0, 655349, 22, 0, 655356, 22, 0, 655357, 22, 0, 655358, 22, 0, 655359, 22, 0, 589824, 22, 0, 589825, 22, 0, 589826, 22, 0, 589827, 22, 0, 589834, 22, 0, 589835, 22, 0, 589836, 22, 0, 589837, 22, 0, 589838, 22, 0, 589839, 26, 0, 720886, 26, 0, 720887, 26, 0, 720888, 26, 0, 720889, 26, 0, 720890, 26, 0, 720891, 26, 0, 655364, 26, 0, 655365, 26, 0, 655366, 26, 0, 655367, 26, 0, 655368, 26, 0, 655369, 26, 0 )

[node name="Box" parent="." instance=ExtResource( 3 )]
position = Vector2( 225, -115 )

[node name="Box2" parent="." instance=ExtResource( 3 )]
position = Vector2( -200, -107 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Player" parent="." groups=["player", "player1"] instance=ExtResource( 2 )]
position = Vector2( -130, -108 )

[node name="Player2" parent="." groups=["player", "player2"] instance=ExtResource( 2 )]
position = Vector2( 152, -115 )
player_num = 1

[node name="KillBox1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox1"]
position = Vector2( -224, 306 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="KillBox1"]
margin_left = -320.0
margin_top = 292.0
margin_right = -128.0
margin_bottom = 320.0
color = Color( 1, 0, 0, 1 )

[node name="KillBox2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox2"]
position = Vector2( 224, 306 )
shape = SubResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="KillBox2"]
margin_left = 128.0
margin_top = 292.0
margin_right = 320.0
margin_bottom = 320.0
color = Color( 1, 0, 0, 1 )

[node name="WinZone" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinZone"]
position = Vector2( 0, 256 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="WinZone/CollisionShape2D"]
margin_left = -35.0
margin_top = -32.0
margin_right = 35.0
margin_bottom = 32.0
color = Color( 0.658824, 0.941176, 0.623529, 1 )

[connection signal="body_entered" from="KillBox1" to="." method="_on_KillBox1_body_entered"]
[connection signal="body_entered" from="KillBox2" to="." method="_on_KillBox2_body_entered"]
[connection signal="body_entered" from="WinZone" to="." method="_on_WinZone_body_entered"]
[connection signal="body_exited" from="WinZone" to="." method="_on_WinZone_body_exited"]
